# captain3preview

./: README.md  pyproject.toml
captain/: __init__.py
captain/agents/: __init__.py  feature_extractor.py  policy_network.py  rewards.py
captain/algorithms/: __init__.py  episode.py  evolution_train.py  scheduler.py
captain/data/: __init__.py  extinction_risk.py  spatial_data.py
captain/environment/: __init__.py  bioenv.py
captain/utils/: __init__.py  data_loader.py  grid_utils.py  plots.py
docs/: architecture.md
examples/: README.md  plot_input_data.py  run_inference.py  train_policy.py
